tests/files/valid/keyless_directive.ys
enum Status {
    SUPPORTED = 0
    DEPRECATED = 1
}

ruleset App {
    version int
    name str
    dependencies list(str)
    status Status optional
}

schema {
    !!yamlator list(App)
}