tests/files/invalid_files/nested_union.ys

ruleset Config {
    kind str
    version union(str, int, union(int, str))
}

schema {
    config Config optional
}